--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -5,6 +5,7 @@
   width: 100%;
   padding: 256px calc((100% - 1024px) / 2) 24px;
   z-index: 1;
+  align-items: center;
 
   @media (max-width: 1024px) {
     padding: 128px calc((100% - 1024px) / 2) 24px;
@@ -12,16 +13,19 @@
 
   &-background {
     position: absolute;
-    width: 100%;
+    width: calc(100% + 24px);
     height: 100%;
     background-image: url("../../resources/hero_banner.png");
     background-size: cover;
     background-position: bottom center;
     background-repeat: no-repeat;
     top: 0;
-    left: 0;
-    filter: blur(2px);
     z-index: 1;
+    border-radius: 0 0 64px 64px;
+
+    @media (max-width: 768px) {
+      border-radius: 0 0 32px 32px;
+    }
   }
 
   &-title {
