--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -2,18 +2,16 @@
 
 .navbar {
   width: 100%;
-  position: fixed;
-  padding: 8px calc((100% - 1024px) / 2);
-  align-items: center;
-  backdrop-filter: blur(4px);
-  background-color: rgba($color: $black, $alpha: 0.9);
+  position: absolute;
+  padding: 32px calc((100% - 1024px) / 2) 0;
+  align-items: flex-end;
   justify-content: space-between;
   z-index: 99;
 
   &-logo {
     font-size: 24px;
     padding-left: 32px;
-    color: $green;
+    font-weight: bold;
 
     @media (max-width: 768px) {
       padding-left: 16px;
@@ -22,10 +20,14 @@
     @media (max-width: 425px) {
       padding-left: 8px;
     }
+
+    & > img {
+      width: 64px;
+      margin-right: 8px;
+    }
   }
 
   &-wrapper {
-    align-items: center;
     padding-right: 16px;
 
     @media (max-width: 768px) {
@@ -44,21 +46,23 @@
   }
 
   &-links {
-    display: inline;
-
     @media (max-width: 768px) {
       display: none;
     }
 
-    &-anchor {
+    & > a {
+      text-decoration: none;
       cursor: pointer;
-      font-size: 18px;
+      display: flex;
+      flex-direction: column;
+      font-size: 20px;
       font-weight: bold;
-      color: $green;
       transition: 0.3s;
+      color: $black;
 
-      &:hover {
-        color: $black;
+      &::after {
+        content: "";
+        height: 16px;
       }
 
       &:not(:last-child) {
