--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -3,12 +3,12 @@
 .hero {
   position: relative;
   width: 100%;
-  padding: 256px calc((100% - 1024px) / 2) 24px;
+  padding: 256px calc((100% - 1280px) / 2) 24px;
   z-index: 1;
   align-items: center;
 
-  @media (max-width: 1024px) {
-    padding: 128px calc((100% - 1024px) / 2) 24px;
+  @media (max-width: 1280px) {
+    padding: 128px calc((100% - 1280px) / 2) 24px;
   }
 
   &-background {
@@ -30,26 +30,48 @@
 
   &-title {
     position: relative;
-    width: 100%;
-    margin-bottom: 32px;
+    width: 480px;
+    height: 480px;
+    margin-bottom: 64px;
+    align-items: center;
+    justify-content: center;
     z-index: 2;
+
+    @media (max-width: 768px) {
+      width: 360px;
+      height: 360px;
+    }
+
+    &:before {
+      position: absolute;
+      content: " ";
+      width: 100%;
+      padding-top: 100%;
+      background-image: url("../../resources/hero-title.png");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+      z-index: 1;
+    }
 
     & > span {
       text-align: center;
-      color: $green;
-      font-size: 96px;
+      padding: 0 24px 0 48px;
+      color: $yellow-dark;
+      font-size: 48px;
       font-weight: bold;
+      z-index: 2;
 
       &:not(:last-child) {
-        font-size: 64px;
+        font-size: 36px;
         margin-bottom: 16px;
 
         @media (max-width: 1024px) {
-          font-size: 48px;
+          font-size: 32px;
         }
 
         @media (max-width: 768px) {
-          font-size: 36px;
+          font-size: 24px;
         }
       }
 
@@ -67,17 +89,13 @@
     position: relative;
     width: 100%;
     text-align: center;
-    padding: 0 20%;
-    color: $green;
+    padding: 0 60px 0 88px;
+    color: $yellow-dark;
     z-index: 2;
     font-size: 24px;
 
     @media (max-width: 768px) {
       font-size: 18px;
-    }
-
-    @media (max-width: 425px) {
-      padding: 0 8px;
     }
   }
 
@@ -118,21 +136,23 @@
     position: relative;
     width: 100%;
     justify-content: center;
+    margin-bottom: 24px;
     z-index: 2;
 
     & > button {
-      padding: 16px 64px;
+      padding: 12px 32px;
+      background-image: linear-gradient(90deg, $pink-light, $blue-lighter);
       color: $black;
       font-size: 18px;
       font-weight: bold;
       letter-spacing: 2px;
       border: 0;
-      border-radius: 8px;
+      border-radius: 16px;
       cursor: pointer;
 
       &:hover {
         color: $white;
-        background-color: $green;
+        background-image: linear-gradient(270deg, $pink-light, $blue-lighter);
       }
     }
   }
