--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,18 +3,24 @@
 
 html,
 body {
-  width: 100%;
+  width: 100vw;
   border: 0;
   margin: 0;
   padding: 0;
   outline: 0;
+  overflow-x: hidden;
 }
 
 #root {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: $pink-light;
+  background-image: linear-gradient(
+    180deg,
+    $pink-dark,
+    $pink-light,
+    $blue-light
+  );
 }
 
 * {
