--- a/src/components/SneakPeek/style.scss
+++ b/src/components/SneakPeek/style.scss
@@ -68,10 +68,19 @@
     & > span {
       font-size: 18px;
       text-align: center;
+      padding: 0 128px 0 0;
       color: $white;
 
       &:not(:last-child) {
         margin-bottom: 32px;
+      }
+
+      @media (max-width: 1024px) {
+        padding: 0 64px 0 0;
+      }
+
+      @media (max-width: 768px) {
+        padding: 0 24px 24px;
       }
 
       @media (max-width: 425px) {
