--- a/src/components/Roadmap/style.scss
+++ b/src/components/Roadmap/style.scss
@@ -49,7 +49,7 @@
     text-align: center;
     font-size: 36px;
     font-weight: bold;
-    color: $yellow-dark;
+    color: $white;
 
     @media (max-width: 768px) {
       padding: 16px 16px 64px;
