--- a/src/components/FAQ/style.scss
+++ b/src/components/FAQ/style.scss
@@ -14,7 +14,7 @@
     text-align: center;
     font-size: 36px;
     font-weight: bold;
-    color: $white;
+    color: $black;
 
     @media (max-width: 768px) {
       padding: 16px;
@@ -38,19 +38,19 @@
   }
 
   &-item {
-    border-top: 1px solid $white;
+    border-top: 1px solid $black;
     padding: 24px;
     transition: 0.5s;
     z-index: 4;
 
     &:last-child {
-      border-bottom: 1px solid $white;
+      border-bottom: 1px solid $black;
     }
 
     & > span {
       align-items: center;
       justify-content: space-between;
-      color: $white;
+      color: $black;
       font-size: 24px;
       font-weight: bold;
       cursor: pointer;
@@ -63,7 +63,7 @@
       overflow: hidden;
       transition: 0.5s;
       font-size: 18px;
-      color: $white;
+      color: $black;
     }
 
     &-icon {
