--- a/src/components/Game/style.scss
+++ b/src/components/Game/style.scss
@@ -10,8 +10,9 @@
   }
 
   & > .title {
-    color: $white;
+    color: $black;
     text-align: center;
+    font-weight: bold;
     font-size: 32px;
 
     @media (max-width: 768px) {
