--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -57,7 +57,7 @@
     & > span {
       text-align: center;
       padding: 0 24px 0 48px;
-      color: $white;
+      color: $black;
       font-size: 48px;
       font-weight: bold;
       z-index: 2;
@@ -90,7 +90,7 @@
     width: 100%;
     text-align: center;
     padding: 0 60px 0 88px;
-    color: $white;
+    color: $black;
     z-index: 2;
     font-size: 24px;
 
@@ -114,8 +114,8 @@
       border-radius: 16px;
 
       @media (max-width: 768px) {
-        padding: 16px;
-        width: 90px;
+        padding: 8px;
+        width: 88px;
       }
 
       & > span {
