--- a/src/components/SneakPeek/style.scss
+++ b/src/components/SneakPeek/style.scss
@@ -18,7 +18,7 @@
     text-align: center;
     font-size: 36px;
     font-weight: bold;
-    color: $white;
+    color: $black;
 
     @media (max-width: 768px) {
       font-size: 32px;
@@ -69,7 +69,7 @@
       font-size: 22px;
       text-align: center;
       padding: 0 128px 0 0;
-      color: $white;
+      color: $black;
 
       &:not(:last-child) {
         margin-bottom: 32px;
