--- a/src/components/SneakPeek/style.scss
+++ b/src/components/SneakPeek/style.scss
@@ -4,13 +4,14 @@
   width: 100%;
   padding: 128px calc((100% - 1280px) / 2) 64px;
   background-image: url("../../resources/our-story.png");
-  background-size: 100% 680px;
-  background-position: center center;
+  background-size: 100% 650px;
+  background-position: center bottom;
   background-repeat: no-repeat;
   z-index: 4;
 
   @media (max-width: 768px) {
     padding: 64px calc((100% - 1280px) / 2) 64px;
+    background-size: cover;
   }
 
   &-title {
@@ -61,32 +62,53 @@
     justify-content: center;
   }
 
+  &-hot {
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+
+    &:before {
+      content: "🏆 ";
+
+      @media (max-width: 768px) {
+        content: "🏆 ";
+      }
+    }
+
+    @media (max-width: 1024px) {
+      padding: 0 32px 0 0;
+    }
+
+    @media (max-width: 768px) {
+      text-align: center;
+      padding: 0 24px 8px;
+    }
+  }
+
   &-comment {
     align-items: center;
     justify-content: center;
 
     & > span {
-      font-size: 22px;
+      font-size: 18px;
       text-align: center;
       padding: 0 128px 0 0;
       color: $black;
 
       &:not(:last-child) {
         margin-bottom: 32px;
+
+        @media (max-width: 768px) {
+          margin-bottom: 16px;
+        }
       }
 
       @media (max-width: 1024px) {
-        padding: 0 64px 0 0;
+        padding: 0 24px 0 0;
       }
 
       @media (max-width: 768px) {
-        font-size: 20px;
-        padding: 0 24px 24px;
-      }
-
-      @media (max-width: 425px) {
-        font-size: 18px;
-        padding: 0 24px 24px;
+        padding: 0 24px 12px;
       }
     }
   }
