--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import "./variables.scss";
 
 html,
@@ -25,7 +25,7 @@ body {
 
 * {
   outline: 0;
-  font-family: "Balsamiq Sans", cursive;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
 
