--- a/src/components/FAQ/style.scss
+++ b/src/components/FAQ/style.scss
@@ -2,45 +2,29 @@
 
 .faq {
   width: 100%;
-  padding: 128px calc((100% - 1280px) / 2) 32px;
+  align-items: center;
   z-index: 4;
 
-  @media (max-width: 768px) {
-    padding: 64px calc((100% - 1280px) / 2) 32px;
-  }
-
   &-title {
-    padding: 32px;
+    padding: 32px 0;
+    white-space: nowrap;
     text-align: center;
-    font-size: 36px;
+    font-size: 32px;
     font-weight: bold;
     color: $black;
 
     @media (max-width: 768px) {
-      padding: 16px;
-    }
-
-    @media (max-width: 425px) {
-      font-size: 24px;
-      padding: 8px;
+      font-size: 18px;
     }
   }
 
   &-wrapper {
-    padding: 16px 32px;
-
-    @media (max-width: 768px) {
-      padding: 16px;
-    }
-
-    @media (max-width: 425px) {
-      padding: 8px;
-    }
+    padding: 16px 0;
   }
 
   &-item {
     border-top: 1px solid $black;
-    padding: 24px;
+    padding: 16px;
     transition: 0.5s;
     z-index: 4;
 
@@ -52,9 +36,13 @@
       align-items: center;
       justify-content: space-between;
       color: $black;
-      font-size: 24px;
+      font-size: 18px;
       font-weight: bold;
       cursor: pointer;
+
+      @media (max-width: 768px) {
+        font-size: 16px;
+      }
     }
 
     & > p {
@@ -63,8 +51,11 @@
       opacity: 0;
       overflow: hidden;
       transition: 0.5s;
-      font-size: 18px;
       color: $black;
+
+      @media (max-width: 768px) {
+        font-size: 14px;
+      }
     }
 
     &-icon {
@@ -80,7 +71,7 @@
 }
 
 .selected {
-  padding: 24px 0 0;
+  padding: 16px 0 0;
   opacity: 1 !important;
   height: auto !important;
 }
