--- a/src/components/Game/style.scss
+++ b/src/components/Game/style.scss
@@ -3,24 +3,26 @@
 .game {
   position: relative;
   width: 100%;
-  padding: 128px calc((100% - 1280px) / 2) 32px;
+  align-items: center;
 
-  @media (max-width: 768px) {
-    padding: 64px calc((100% - 1280px) / 2) 32px;
-  }
-
-  & > .title {
-    color: $black;
+  &-title {
+    padding: 32px 0;
+    white-space: nowrap;
     text-align: center;
-    font-weight: bold;
     font-size: 32px;
+    font-weight: bold;
+    color: $black;
 
     @media (max-width: 768px) {
       display: none;
     }
   }
 
-  &-title {
+  &-wrapper {
+    position: relative;
+  }
+
+  &-decoration {
     width: 200px;
     position: absolute;
     display: flex;
