--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -3,13 +3,12 @@
 .navbar {
   width: 100%;
   position: absolute;
-  padding: 32px calc((100% - 1280px) / 2) 0;
-  align-items: center;
-  justify-content: space-between;
+  padding: 32px 0 0;
+  justify-content: center;
   z-index: 99;
 
-  @media (max-width: 768px) {
-    align-items: center;
+  &-wrapper {
+    justify-content: space-between;
   }
 
   &-logo {
