--- a/src/components/SneakPeek/style.scss
+++ b/src/components/SneakPeek/style.scss
@@ -2,64 +2,52 @@
 
 .sneakpeek {
   width: 100%;
-  padding: 128px calc((100% - 1280px) / 2) 64px;
+  padding: 128px 0 64px;
   background-image: url("../../resources/our-story.png");
   background-size: 100% 650px;
   background-position: center bottom;
   background-repeat: no-repeat;
+  align-items: center;
   z-index: 4;
 
   @media (max-width: 768px) {
-    padding: 64px calc((100% - 1280px) / 2) 64px;
+    padding: 64px 0 64px;
     background-size: cover;
   }
 
   &-title {
-    padding: 32px;
+    padding: 32px 0;
+    white-space: nowrap;
     text-align: center;
-    font-size: 36px;
+    font-size: 32px;
     font-weight: bold;
     color: $black;
 
     @media (max-width: 768px) {
-      font-size: 32px;
-      padding: 16px;
-    }
-
-    @media (max-width: 425px) {
-      font-size: 24px;
-      padding: 8px;
+      font-size: 18px;
     }
   }
 
   &-wrapper {
-    padding: 32px;
     display: grid;
-    grid-template-columns: 50% 50%;
-
-    & > div {
-      &:not(:last-child) {
-        margin-right: 36px;
-
-        @media (max-width: 768px) {
-          margin-right: 0;
-          margin-bottom: 24px;
-        }
-      }
-    }
+    grid-template: auto / 1fr 1fr;
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
 
     @media (max-width: 768px) {
-      padding: 16px;
-      grid-template-columns: auto;
-    }
-
-    @media (max-width: 425px) {
-      padding: 8px;
+      grid-template: auto / 1fr;
     }
   }
 
   &-iterator {
     justify-content: center;
+    width: 100%;
+
+    & > img {
+      width: 100%;
+      max-width: 360px;
+      border-radius: 16px;
+    }
   }
 
   &-hot {
