--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;500;600;700&display=swap");
 @import "./variables.scss";
 
 html,
@@ -40,4 +41,9 @@ body {
 
 .flex-column-reverse {
   flex-direction: column-reverse;
+}
+
+.container {
+  width: 90%;
+  max-width: 1280px;
 }
