--- a/src/components/Roadmap/Frame/style.scss
+++ b/src/components/Roadmap/Frame/style.scss
@@ -79,7 +79,7 @@
 
   &-contents {
     position: relative;
-    background-color: #cdaff6;
+    background-color: #90befa;
     padding: 24px;
     z-index: 1;
     font-size: 24px;
