--- a/src/components/Horsemen/style.scss
+++ b/src/components/Horsemen/style.scss
@@ -8,14 +8,13 @@
 
   &-title {
     padding: 32px 0;
-    white-space: nowrap;
     text-align: center;
     font-size: 32px;
     font-weight: bold;
     color: $black;
 
     @media (max-width: 768px) {
-      font-size: 18px;
+      font-size: 24px;
     }
   }
 
@@ -29,6 +28,10 @@
       grid-template: auto / 1fr 1fr;
       grid-column-gap: 12px;
       grid-row-gap: 12px;
+    }
+
+    @media (max-width: 425px) {
+      grid-template: auto / 1fr;
     }
   }
 
@@ -47,7 +50,7 @@
       font-weight: bold;
 
       @media (max-width: 768px) {
-        font-size: 24px;
+        font-size: 28px;
       }
     }
   }
