--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -151,8 +151,8 @@
     position: relative;
     width: 100%;
     justify-content: center;
-    margin-bottom: 24px;
     z-index: 2;
+    padding: 48px 0 32px;
 
     & > button {
       padding: 12px 32px;
